syntax = "proto3";

package catalog.brand;

import "common/base.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.gdn.project.waroenk.catalog";
option java_outer_classname = "BrandMessagesProto";

message BrandData {
    string id = 1;
    string name = 2;
    string slug = 3;
    string icon_url = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateBrandRequest {
    string name = 1;
    string slug = 2;
    string icon_url = 3;
}

message UpdateBrandRequest {
    string id = 1;
    optional string name = 2;
    optional string slug = 3;
    optional string icon_url = 4;
}

message FindBrandBySlugRequest {
    string slug = 1;
}

message FilterBrandRequest {
    optional string name = 1;
    optional string slug = 2;
    int32 size = 3;
    optional string cursor = 4;
    optional common.SortBy sort_by = 5;
}

message MultipleBrandResponse {
    repeated BrandData data = 1;
    string next_token = 2;
    int32 total = 3;
}






