syntax = "proto3";

package catalog.merchant;

import "common/base.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.gdn.project.waroenk.catalog";
option java_outer_classname = "MerchantMessagesProto";

message ContactInfo {
    string phone = 1;
    string email = 2;
}

message MerchantData {
    string id = 1;
    string name = 2;
    string code = 3;
    ContactInfo contact = 4;
    string icon_url = 5;
    string location = 6;
    float rating = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message CreateMerchantRequest {
    string name = 1;
    string code = 2;
    ContactInfo contact = 3;
    string icon_url = 4;
    string location = 5;
    optional float rating = 6;
}

message UpdateMerchantRequest {
    string id = 1;
    optional string name = 2;
    optional string code = 3;
    optional string icon_url = 4;
    optional string location = 5;
    optional ContactInfo contact = 6;
    optional float rating = 7;
}

message FindMerchantByCodeRequest {
    string code = 1;
}

message FilterMerchantRequest {
    optional string name = 1;
    optional string code = 2;
    int32 size = 3;
    optional string cursor = 4;
    optional common.SortBy sort_by = 5;
}

message MultipleMerchantResponse {
    repeated MerchantData data = 1;
    string next_token = 2;
    int32 total = 3;
}
